namespace CookieCookbook.Enumerations
{
    public enum FileFormat
    {
        Json,
        txt
    }
}